--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <body>
     <!-- nav -->
     <nav class="navbar navbar-expand-lg topbar">
-        <a class="navbar-brand logo" href="./index.html">
-            <img src="./img/logo.png" alt="">
-        </a>
+        <img src="./img/logo.png" alt="">
         <div class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="menu-btn">
                 <div class="menu-btn-burger"></div>
@@ -27,19 +25,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link" href="./index.html">home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="./about.html">關於我們</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">會員</a>
+                    <a class="nav-link" href="./plan.html">訓練計畫</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">訓練計畫</a>
+                    <a class="nav-link" href="./fqa.html">問與答</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">問與答</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">聯繫我們</a>
+                    <a class="nav-link" href="./contact.html">聯繫我們</a>
                 </li>
             </ul>
         </div>
@@ -170,84 +168,72 @@
         <!-- plan -->
         <section class="plan-wrapper container-fluid">
             <div class="plan row justify-content-center">
-                <div class="plan-box">
-                    <img class="img-fluid" src="./img/boxing.jpg" alt="">
-                    <a href="#">
+                <a href="./plan.html">
+                    <div class="plan-box">
+                        <img class="img-fluid" src="./img/boxing.jpg" alt="">
                         <div class="plan-name">拳擊訓練</div>
-                    </a>
-                    <a href="#">
                         <div class="overlay">
                             <div class="text">more</div>
                         </div>
-                    </a>
-                </div>
-                <div class="plan-box">
-                    <img class="img-fluid" src="./img/nutrition.jpg" alt="">
-                    <a href="#">
+                    </div>
+                </a>
+                <a href="./plan.html">
+                    <div class="plan-box">
+                        <img class="img-fluid" src="./img/nutrition.jpg" alt="">
                         <div class="plan-name">營養訓練</div>
-                    </a>
-                    <a href="#">
                         <div class="overlay">
                             <div class="text">more</div>
                         </div>
-                    </a>
-                </div>
-                <div class="plan-box">
-                    <img class="img-fluid" src="./img/private.jpg" alt="">
-                    <a href="#">
+                    </div>
+                </a>   
+                <a href="./plan.html">
+                    <div class="plan-box">
+                        <img class="img-fluid" src="./img/private.jpg" alt="">
                         <div class="plan-name">私人訓練</div>
-                    </a>
-                    <a href="#">
                         <div class="overlay">
                             <div class="text">more</div>
                         </div>
-                    </a>
-                </div>
-                <div class="plan-box">
-                    <img class="img-fluid" src="./img/push_wheel-2.jpg" alt="">
-                    <a href="#">
+                    </div>
+                </a>
+                <a href="./plan.html">
+                    <div class="plan-box">
+                        <img class="img-fluid" src="./img/push_wheel.jpg" alt="">
                         <div class="plan-name">有氧訓練</div>
-                    </a>
-                    <a href="#">
                         <div class="overlay">
                             <div class="text">more</div>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
+                
             </div>
         </section>
     </main> 
     <!-- footer -->
     <footer>
         <div class="footer-body">
-            <a href="#">
-                <img src="./img/logo.png" alt="">
-            </a>
+            <img src="./img/logo.png" alt="">
             <ul class="footer-nav">
                 <li>
-                    <a href="javescript:;">關於我們</a>
+                    <a href="./about.html">關於我們</a>
                 </li>
                 <li>
-                    <a href="#">會員</a>
+                    <a href="./plan.html">訓練計畫</a>
                 </li>
                 <li>
-                    <a href="#">訓練計畫</a>
+                    <a href="./fqa.html">問與答</a>
                 </li>
                 <li>
-                    <a href="#">問與答</a>
-                </li>
-                <li>
-                    <a href="#">聯繫我們</a>
+                    <a href="./contact.html">聯繫我們</a>
                 </li>
             </ul>
             <ul class="footer-icon">
-                <a href="#">
+                <a href="https://zh-tw.facebook.com/">
                     <i class="bi bi-facebook"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/">
                     <i class="bi bi-instagram"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.youtube.com/">
                     <i class="bi bi-youtube"></i>
                 </a>
             </ul>
