--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./stylesheets/all.css">
     <link rel="stylesheet" href="./stylesheets/base.css">
     <link rel="stylesheet" href="./stylesheets/index.css">
-    <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
     <!-- nav -->
@@ -100,11 +100,7 @@
             </div>
             <div class="row">
                 <div class="recommend-box col-lg-4 col-md-6">
-<!--                     <i class="bi bi-currency-dollar"></i> -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-align-start" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M1.5 1a.5.5 0 0 1 .5.5v13a.5.5 0 0 1-1 0v-13a.5.5 0 0 1 .5-.5z"/>
-  <path d="M3 7a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7z"/>
-</svg>
+                    <i class="bi bi-currency-dollar"></i>
                     <span>超值課程</span>
                 </div>
                 <div class="recommend-box col-lg-4 col-md-6">
