--- a/fqa.html
+++ b/fqa.html
@@ -106,7 +106,7 @@
                     </h2>
                     <div id="collapseFour" class="text collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
                         <div class="card-body">
-                            館內禁止寵物入內。
+                            為維護場域及人員安全，嚴禁會員攜帶個人電器用品進場使用。
                         </div>
                     </div>
                 </div>
