--- a/plan.html
+++ b/plan.html
@@ -107,7 +107,7 @@
             <div class="about-content">
                 <h2>私人訓練</h2>
                 <p class="subtitle">
-                    從30、45或60分鐘的個人培訓課程中選擇。我們的專業教練將為您提供正確和安全地進行鍛煉所需的所有支持。您將收到適合您的健身旅程的客製化行程，並在此過程中獲得大量幫助和建議。
+                    從30、45或60分鐘的個人培訓課程中選擇。您將收到適合您的健身旅程的客製化行程，並在此過程中獲得大量幫助和建議。
                 </p>
                 <ul>
                     <li>
@@ -131,9 +131,7 @@
             <div class="about-content">
                 <h2>有氧訓練</h2>
                 <p class="subtitle">
-                    在全世界流行的高強度間歇訓練、風彌全球的槓鈴課程，通通引進不保留。
-
-                    擁有豐富的有氧團體課程，包括心肺、肌力、舞蹈、伸展、飛輪、LES MILLS、MOSSA...等各式類型的課程，滿滿爆炸的課表，隨時可以起身上課。
+                    在全世界流行的高強度間歇訓練、風彌全球的槓鈴課程，通通引進不保留。擁有豐富的有氧團體課程，滿滿的課表，隨時可以報名上課。
                 </p>
                 <ul>
                     <li>
