--- a/fqa.html
+++ b/fqa.html
@@ -138,7 +138,7 @@
                     <a href="./plan.html">訓練計畫</a>
                 </li>
                 <li>
-                    <a href="./fqa.html">問與答</a>
+                    <a href="./fqa.html">常見問題</a>
                 </li>
                 <li>
                     <a href="./contact.html">聯繫我們</a>
