--- a/plan.html
+++ b/plan.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="./plan.html">訓練計畫</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./fqa.html">問與答</a>
+                    <a class="nav-link" href="./fqa.html">常見問題</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./contact.html">聯繫我們</a>
@@ -165,7 +165,7 @@
                     <a href="./plan.html">訓練計畫</a>
                 </li>
                 <li>
-                    <a href="./fqa.html">問與答</a>
+                    <a href="./fqa.html">常見問題</a>
                 </li>
                 <li>
                     <a href="./contact.html">聯繫我們</a>
