--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BODESIGN - 幫您找尋最好的體態</title>
+    <meta name="description" content="為您的身體量身打造出屬於自己最棒的姿態" />
+    <meta name="keywords" content="健身房,健身,健身教練,健身房推薦,健身中心,健身俱樂部,健身房教練,私人教練" />
     <link rel="shortcut icon" href="./img/logo-icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./stylesheets/reset.css">
     <link rel="stylesheet" href="./stylesheets/all.css">
