--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     BODESIGN不僅是體育館，還是大家庭。我們的教練將幫助您改變生活，提高生活品質。
                     使用適合您需求的訓練和營養計劃，您可以享受應有的健康生活。
                 </p>
-                <a href="#">
+                <a href="./about.html">
                     <div class="about-btn">
                         <span>看更多</span>
                         <div class="btn-line"></div>
